syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstInGamePurchaseTableItemExProtobuf";

message	ConstInGamePurchaseTableItemEx  {
		string	id = 1;
		uint32	stone = 2;
		string	desc = 3;
		string	icon = 4;
		uint32	cost = 5;
}